Finalizing changes before presentation

--- a/src/app/encryption-details/encryption-details.component.html
+++ b/src/app/encryption-details/encryption-details.component.html
@@ -78,7 +78,7 @@
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
               MD5 (Message-Digest Algorithm)
@@ -99,7 +99,7 @@
               <strong>MD5 has been used to verify that a file has been unaltered. It has also ben used to securely store passwords.</strong>
             </mat-card-content>
           </mat-card>
-        </mat-grid-tile>
+        </mat-grid-tile> -->
     </mat-grid-list>
 </div>
  </mat-tab>
@@ -139,7 +139,8 @@
             </mat-card-title>
             <mat-card-content>
               <br>
-              <strong>Also referred to as JPG. A file format that is used to compress image files.</strong>
+              <strong>Stands for Joint Photographic Experts Group. It is also referred to as JPG.
+                A file format that is used to compress image files.</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
@@ -226,7 +227,499 @@
     </mat-grid-list>
 </div>
  </mat-tab>
-  <!-- <mat-tab label="PDF"> <h6>Information Coming Soon....</h6> </mat-tab> -->
+
+
+
+
+
+
+
+
+  <mat-tab label="PDF">
+      <br><br>
+
+    <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Welcome to the PDF section!</h6>
+
+      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        This section focuses on identifying and extracting information from these files. </p>
+
+
+    <div class="grid-container" >
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              PDF
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>Stands for Portable Document Format. It is a file format that presents documents
+                in a standard, Adobe-created system. A PDF file encapsulates the complete description
+                of the document, including text, fonts, and images.
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Metadata
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>Information about a data structure, such as a file. It can define many things, including:
+                modified time, created time, file ownership, and file size.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Extractable Data from a PDF File
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+                Much of the extractable information in PDFs are relatively familiar attributes. These
+                common attributes include: Modified Date, Title, Creator, File Size, Last Modified.
+                <!-- <br>
+                Modified Date<br>
+                Title<br>
+                Creator<br>
+                File Size<br>
+                Last Modified<br> -->
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Soon....
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile> -->
+    </mat-grid-list>
+  </div>
+ </mat-tab>
+
+
+
+
+
+
+  <mat-tab label="PNG">
+      <br><br>
+
+    <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Welcome to the PNG section!</h6>
+
+      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        This section focuses on identifying and extracting information from these files. </p>
+
+
+    <div class="grid-container" >
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              PNG
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>Stands for Portable Network Graphics. It is a graphics file format that supports image files.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              PNG File Structure
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>A PNG file consists of a signature, followed by a series of chunks. All of which is defined using bytes.
+                </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              PNG Signature
+            </mat-card-title>
+            <mat-card-content>
+              <br><strong>
+              The first 8 bytes of every PNG file are identical, and is referred to as PNG's signature.
+              It can be used to signify that the file being examined is a PNG file.
+              This series of bytes are 89 50 4E 47 0D 0A 1A 0A, or 137 80 78 71 13 10 26 10 in decimal. </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              PNG Chunk
+            </mat-card-title>
+            <mat-card-content>
+              <br><strong>
+              These bytes detail attributes about the PNG file. Each chunk is arranged with the following components:
+              Length,
+              Chunk Type,
+              Chunk Data,
+              CRC. </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Length
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>A 4-byte unsigned integer giving the number of bytes in the chunk's data field.
+                The length does not count itself, the chunk type code, or the CRC.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Chunk Type
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>A 4-byte code consisting of ASCII characters, that can be used
+                to obtain a better description and examination of the PNG file.
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Chunk Data
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The chunk data is a series of data bytes that describe the chunk type.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              CRC
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>Stands for the Cyclic Redundancy Check. It is a 4-byte value that is
+                calculated using the preceding bytes in the chunk, including the chunk type
+              code and the chunk data fields. The length field is not used to calculate the
+            CRC.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              IHDR Chunk
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>It is the first chunk following the file signature. This chunk contains
+                information regarding the image's height, width, and bit depth.
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              IEND Chunk
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+              It is the last of the series of chunks that follow the file signature. This
+              chunk is just used to symbolize the end of the image file.
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+ </mat-tab>
+
+
+
+
+
+   <mat-tab label="MP3">
+      <br><br>
+
+    <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Welcome to the MP3 section!</h6>
+
+      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        This section focuses on identifying and extracting information from these files. </p>
+
+
+    <div class="grid-container" >
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Information
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Is
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Coming
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Soon....
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile> -->
+    </mat-grid-list>
+  </div>
+ </mat-tab>
+
+   <mat-tab label="Algorithms">
+      <br><br>
+
+    <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Welcome to the PNG section!</h6>
+
+      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        This section focuses on identifying and extracting information from these files. </p>
+
+
+    <div class="grid-container" >
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              MD5 (Message-Direct Algorithm)
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>A hashing algorithm that accepts a message as an input and returns a value as its output.
+                That value can authenticate the original message.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Purposes of the MD5
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>MD5 has been used to verify that a file has been unaltered.
+                It has also ben used to securely store passwords.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Coming
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Soon....
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile> -->
+    </mat-grid-list>
+  </div>
+ </mat-tab>
+
+
 </mat-tab-group>
 
 
