Initating creation of database section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,7 @@
       <button class = "menu-button" mat-menu-item (click)=home()>Home</button>
       <button class = "menu-button" mat-menu-item (click)=encrypt()>Encryption</button>
       <button class = "menu-button" mat-menu-item (click)=pass_crack()>Password Cracking</button>
+      <button class = "menu-button" mat-menu-item (click)=database()>Database</button>
       <button class = "menu-button" mat-menu-item (click)=about()>About Us</button>
     </mat-menu>
 </mat-toolbar>
