--- a/src/app/crack-password-details/crack-password-details.component.html
+++ b/src/app/crack-password-details/crack-password-details.component.html
@@ -2,17 +2,18 @@
   <mat-tab label="General" class="mat-tab-labels">
     <br><br>
 
-<h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-        Welcome to the world of Password Cracking!</h6>
+    <h6 style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+      Welcome to the world of Password Cracking!</h6>
 
-      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-        Below, you will find some of the basic terms and concepts that are used when discussing this field. </p>
+    <p style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+      Below, you will find some of the basic terms and concepts that are used when discussing this field. </p>
 
-<div class="grid-container"  fxLayoutGap = "16px grid">
-    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" fxLayoutGap = "16px grid">
+    <div class="grid-container" fxLayoutGap="16px grid">
+      <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center"
+        fxLayoutGap="16px grid">
 
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
+          <mat-card class="colored-card">
             <mat-card-title>
               Password
             </mat-card-title>
@@ -23,7 +24,7 @@
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
+          <mat-card class="colored-card">
             <mat-card-title>
               Password Cracking
             </mat-card-title>
@@ -34,35 +35,39 @@
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
+          <mat-card class="colored-card">
             <mat-card-title>
               Traits of a strong password
             </mat-card-title>
             <mat-card-content>
               <br>
               <strong>Longer than 8 characters <br>
-              Uppercase and Lowercase Ideas <br>
-              Numbers and Special characters <br>
-              Avoid reusing a password <br>
-              Avoid easy-to-guess passwords (1234, password, etc.)</strong>
+                Uppercase and Lowercase Ideas <br>
+                Numbers and Special characters <br>
+                Avoid reusing a password <br>
+                Avoid easy-to-guess passwords (1234, password, etc.)</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
+          <mat-card class="colored-card">
             <mat-card-title>
               Common Password Cracking Techniques
             </mat-card-title>
             <mat-card-content>
               <br>
               <strong>Brute force <br>
-              Dictionary Search <br>
-              Phishing <br>
-              Malware <br></strong>
+                Dictionary Search <br>
+                Phishing <br>
+                Malware <br></strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
-        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+      </mat-grid-list>
+    </div>
+  </mat-tab>
+
+  <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
               List of Potential Defintions
@@ -100,7 +105,76 @@
             </mat-card-content>
           </mat-card>
       </mat-grid-tile> -->
-    </mat-grid-list>
-</div>
-</mat-tab>
+  <mat-tab label="Dictionary Attacks">
+    <br><br>
+
+    <h6 style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+      Welcome to this section on Dictionary Attacks!</h6>
+
+    <p style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+      This section explains the basics of what dictionary attacks are, and how they work. </p>
+
+
+    <div class="grid-container">
+      <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center">
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Dictionary Attack
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+                A cyber attack in which a preselected library of terms, or dictionary, is used to
+                guess possible passwords. Hackers can choose to use dictionaries that include patterns
+                that victims may have followed when creating their passwords. Once the password is successfully
+                acquired, all of the victim's information is now made accessible.
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Brute Force
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+                The process of guessing possible combinations for passwords, encryption keys, or login credentials
+                using only trial-and-error. Once the password is acquired, it is then utilized to hack into
+                a victim's account(s) and obtain access to their personal information.
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Wordlist
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+                Also known as a dictionary, it is a structure consisting of numerous terms that a
+                password cracking tool utilizes to crack the password and break into a victim's account
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Soon....
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile> -->
+      </mat-grid-list>
+    </div>
+  </mat-tab>
 </mat-tab-group>
