Adding components to the database

--- a/src/app/crack-password-details/crack-password-details.component.html
+++ b/src/app/crack-password-details/crack-password-details.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group class="tab-group">
+<mat-tab-group mat-stretch-tabs>
   <mat-tab label="General" class="mat-tab-labels">
     <br><br>
 
@@ -42,8 +42,7 @@
             <mat-card-content>
               <br>
               <strong>Longer than 8 characters <br>
-                Uppercase and Lowercase Ideas <br>
-                Numbers and Special characters <br>
+                Letters (Uppercase and Lowercase), Numbers and Special Characters <br>
                 Avoid reusing a password <br>
                 Avoid easy-to-guess passwords (1234, password, etc.)</strong>
             </mat-card-content>
