--- a/src/app/encryption-details/encryption-details.component.html
+++ b/src/app/encryption-details/encryption-details.component.html
@@ -1,5 +1,6 @@
+<!-- See what class="tab-group" has the ability to do. -->
+<mat-tab-group mat-stretch-tabs>
 
-<mat-tab-group class="tab-group">
   <mat-tab label="General" class="mat-tab-labels">
     <br><br>
 
@@ -507,7 +508,7 @@
 
 
 
-   <mat-tab label="MP3">
+   <!-- <mat-tab label="MP3">
       <br><br>
 
     <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
@@ -564,17 +565,6 @@
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
-        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
-            <mat-card-title>
-
-            </mat-card-title>
-            <mat-card-content>
-              <br>
-
-            </mat-card-content>
-          </mat-card>
-        </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
@@ -607,19 +597,30 @@
 
             </mat-card-content>
           </mat-card>
-        </mat-grid-tile> -->
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
     </mat-grid-list>
   </div>
- </mat-tab>
+ </mat-tab> -->
 
    <mat-tab label="Algorithms">
       <br><br>
 
     <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-        Welcome to the PNG section!</h6>
+        Welcome to the Algorithms section!</h6>
 
       <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-        This section focuses on identifying and extracting information from these files. </p>
+        This section focuses on the general concepts of the algorithms being used in our project. </p>
 
 
     <div class="grid-container" >
