--- a/src/app/home/crack-password/crack-password.component.html
+++ b/src/app/home/crack-password/crack-password.component.html
@@ -1,15 +1,14 @@
-<mat-card class = "colored-card" style="cursor: pointer;" (click)=crackPasswordDetails()>
+<mat-card class = "colored-card" style="cursor: pointer;  height: 225px" (click)=crackPasswordDetails()>
   <mat-card-title>
     <mat-card-content>
       <br>
       <p style="font-size: xx-large; text-align: center;"><em>Password Cracking</em></p>
       <br>
       <br>
-      <em> Explore the world of password cracking! If you select this topic,
+      <em style="text-align: center;"> Explore the world of password cracking! If you select this topic,
         you will be presented with the intriguing world of password implementation!
         You will learn about the fascinating process that consists of
-        secure password development and password cracking. You will
-        even have the opportunity to attempt it live!</em>
+        secure password development and password cracking.</em>
     </mat-card-content>
   </mat-card-title>
 </mat-card>
