--- a/src/app/home/database/database.component.html
+++ b/src/app/home/database/database.component.html
@@ -1,1 +1,14 @@
-<!-- <p>database works!</p> -->
+<mat-card class = "colored-card" style="cursor: pointer;  height: 225px" (click)=databaseDetails()>
+  <mat-card-title>
+    <mat-card-content>
+      <br>
+      <p style="font-size: xx-large; text-align: center;"><em>Project Database</em></p>
+      <br>
+      <br>
+      <em style="text-align: center;">Welcome to our database! When interacting with the GUI,
+        information from both the file and the algorithm's calculations are stored in our database,
+        for further observations. By choosing this option, you will be able to navigate through
+        our constructed database and see what information has been gathered on all examined files!</em>
+    </mat-card-content>
+  </mat-card-title>
+</mat-card>
