--- a/src/app/home/encryption/encryption.component.html
+++ b/src/app/home/encryption/encryption.component.html
@@ -1,15 +1,14 @@
-<mat-card class = "colored-card" style="cursor: pointer;" (click)=encryptionDetails()>
+<mat-card class = "colored-card" style="cursor: pointer; height: 225px" (click)=encryptionDetails()>
   <mat-card-title>
     <mat-card-content>
       <br>
       <p style="font-size: xx-large; text-align: center;"><em>Encryption</em></p>
       <br>
       <br>
-      <em> Explore the world of encryption! If you select this topic,
+      <em style="text-align: center;">Explore the world of encryption! If you select this topic,
         you will enter into the mysterious world of encryption!
         You will learn about the fascinating process that consists of disguising information,
-        developing encryption strategies, and understanding how beneficial it is to encrypt data.
-        You will even have the opportunity to try it for yourself!</em>
+        developing encryption strategies, and understanding how beneficial it is to encrypt data.</em>
     </mat-card-content>
   </mat-card-title>
 </mat-card>
