--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,18 @@
-<br><br><br><br>
-<h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+<br><br><br><br><br>
+<h6 style = "text-align: center; font-size: x-large; font-weight: bold; color: #00053E;">
   Senior Project: Application of Python in Computer Security!</h6>
 
-  <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+  <p style = "text-align: center; font-size: x-large; font-weight: bold; color: #00053E;">
     Below, you can find the different areas in which the Python coding langauge can enhance the Computer Security field.</p>
 
+    <br><br><br>
 <div class="grid-container" >
-    <mat-grid-list cols="2" rowHeight="350px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+    <mat-grid-list cols="3" rowHeight="350px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
             <app-crack-password></app-crack-password>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+            <app-database></app-database>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1">
             <app-encryption></app-encryption>
