--- a/src/app/crack-password-details/crack-password-details.component.css
+++ b/src/app/crack-password-details/crack-password-details.component.css
@@ -1,7 +1,19 @@
 .colored-card{
   border-radius: 10px;
-  border: 2px solid #7BAFDE;
+  border: 4px solid #7BAFDE;
+  background-color: #00053E;
+  color: white;
+
   margin: 50px;
   width: 65%;
-  height: 60%;
+  height: 55%;
+  overflow-y: auto;
+}
+
+.colored-card:hover{
+
+  border: 4px solid #FFE500;
+  background-color: white;
+  color: #00053E;
+
 }
