--- a/src/app/database-details/database-details.component.html
+++ b/src/app/database-details/database-details.component.html
@@ -1,43 +1,242 @@
-<br><br><br><br>
-<h6 style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-  Welcome to our Computer Security Database!</h6>
+<mat-tab-group mat-stretch-tabs>
+  <mat-tab label="Welcome" class="mat-tab-labels">
+    <h6 style="text-align: center; vertical-align: center; font-size: large; font-weight: bold; color: #00053E;">
+      <br><br><br><br><br><br><br><br><br>
+      Welcome to our Computer Security Database!
+      <br><br><br>
+      Here you can observe and analyze the data that has been gathered from our project's various algorithms.
+      <br><br><br>
+      You can use the tabs available to observe the data stored from a particular algorithm.
+      <br><br><br>
+      We hope that you enjoy examining our database!
+    </h6>
+  </mat-tab>
 
-<p style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-  Below, you can query the database that has been acquiring information throughout the duration of our project.</p>
+  <mat-tab label="MD5" class="mat-tab-labels">
 
-
-<mat-expansion-panel expanded hideToggle>
-    <mat-expansion-panel-header style="height: 50px;">
-      <mat-panel-title>
-        <h4 style="padding: 10px 0 5px 0 ; margin: 0">MD5</h4>
-      </mat-panel-title>
-      <mat-panel-description>
-        <em class="fas fa-bars right-expand"></em>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-
-    <div style="height: 187px; overflow-y: auto; min-width: 211.19;">
-      <table class="table">
-        <caption></caption>
-        <thead>
-          <tr>
-            <th scope="col" style="width:min-content;">Date_Time</th>
-            <th scope="col">Value</th>
-            <th scope="col">Comparison</th>
-            <th scope="col">Recalculated_Hex_Digest</th>
-            <th scope="col">Session_File</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let md5 of md5_db">
-              <!-- <td style="padding: 10px 0 0 3%"><input type="radio" [value] = "assessment" [(ngModel)]="currAssessment" [disabled]="assessment.status !== 'Completed'"></td> -->
-              <td>{{md5.Date_Time}}</td>
-              <td>{{md5.Value}}</td>
-              <td>{{md5.Comparison}}</td>
-              <td>{{md5.Recalculated_Hex_Digest}}</td>
-              <td>{{md5.Session_File}}</td>
+      <div style=" overflow-y: auto;">
+        <table class="table" style="width:95%; margin: 2.5%;">
+          <caption></caption>
+          <thead>
+            <tr class="tr-header">
+              <th class="th" scope="col" style="color: #ffe500">Date_Time</th>
+              <th class="th" scope="col" style="color: #ffe500">ID</th>
+              <th class="th" scope="col" style="color: #ffe500">Comparison</th>
+              <th class="th" scope="col" style="color: #ffe500">Hex Digest</th>
+              <th class="th" scope="col" style="color: #ffe500">Recalculated_Hex_Digest</th>
+              <th class="th" scope="col" style="color: #ffe500">Session_File</th>
             </tr>
-        </tbody>
-      </table>
-    </div>
-  </mat-expansion-panel>
+          </thead>
+          <tbody>
+            <tr *ngFor="let md5 of md5_db" class="tr">
+              <td class="td" style="width: 20%; ">{{getAsDate(md5.Date_Time) | date: 'MMMM dd, YYYY'}}</td>
+              <td class="td" style="width: 20%; ">{{md5.ID}}</td>
+              <td class="td" style="width: 20%; ">{{md5.Comparison}}</td>
+              <td class="td" style="width: 20%; ">{{md5.Hex_Digest}}</td>
+              <td class="td" style="width: 20%; ">{{md5.Recalculated_Hex_Digest}}</td>
+              <td class="td" style="width: 20%; ">{{md5.Session_File}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  </mat-tab>
+
+  <!-- <br><br><br><br><br><br> -->
+
+  <mat-tab label="SHA1" class="mat-tab-labels">
+
+      <div style="overflow-y: auto;">
+        <table class="table" style="width:95%; margin: 2.5%;">
+          <caption></caption>
+          <thead>
+            <tr class="tr-header">
+              <th class="th" scope="col" style="color: #ffe500">Date</th>
+              <th class="th" scope="col" style="color: #ffe500">ID</th>
+              <th class="th" scope="col" style="color: #ffe500">Block Size</th>
+              <th class="th" scope="col" style="color: #ffe500">Digest Size</th>
+              <th class="th" scope="col" style="color: #ffe500">Hex Digest</th>
+              <th class="th" scope="col" style="color: #ffe500">Session File</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let sha1 of sha1_db" class="tr">
+              <!-- <td style="padding: 10px 0 0 3%"><input type="radio" [value] = "assessment" [(ngModel)]="currAssessment" [disabled]="assessment.status !== 'Completed'"></td> -->
+              <td class="td">{{getAsDate(sha1.Date) | date: 'MMMM dd, YYYY'}}</td>
+              <td class="td">{{sha1.ID}}</td>
+              <td class="td">{{sha1.Block_Size}}</td>
+              <td class="td">{{sha1.Digest_Size}}</td>
+              <td class="td">{{sha1.Hex_Digest}}</td>
+              <td class="td">{{sha1.Session_File}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+  </mat-tab>
+
+  <!-- <br><br><br><br><br><br> -->
+
+
+  <!-- <mat-tab label="SHA2 V1" class="mat-tab-labels">
+    <mat-expansion-panel expanded hideToggle>
+      <mat-expansion-panel-header style="height: 50px;">
+        <mat-panel-title> -->
+          <!-- <h4 style="padding: 10px 0px 5px 0 ; margin: 0">SHA 2</h4> -->
+        <!-- </mat-panel-title>
+        <mat-panel-description>
+          <em class="fas fa-bars right-expand"></em>
+        </mat-panel-description>
+      </mat-expansion-panel-header> -->
+
+      <!-- <div style=" overflow-y: auto;">
+        <table class="table" style="width:100%">
+          <caption></caption>
+          <thead>
+            <tr>
+              <th class="th" scope="col" style="width:fit-content;">Date</th>
+              <th class="th" scope="col" style="width:fit-content;">ID</th>
+              <th class="th" scope="col" style="width:fit-content;">Session File</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 224 Block Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 224 Digest Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 224 Hex Digest</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 256 Block Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 256 Digest Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 256 Hex Digest</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 384 Block Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 384 Digest Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 384 Hex Digest</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 512 Block Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 512 Digest Size</th>
+              <th class="th" scope="col" style="width:fit-content;">SHA 512 Hex Digest</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let sha2 of sha2_db"> -->
+              <!-- <td style="padding: 10px 0 0 3%"><input type="radio" [value] = "assessment" [(ngModel)]="currAssessment" [disabled]="assessment.status !== 'Completed'"></td> -->
+              <!-- <td class="td" style="width:fit-content;">{{sha2.Date}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.ID}}</td>
+              <td class="sha2" title='{{sha2.Session_File}}' style="width:min-content">{{sha2.Session_File}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Block_Size_224}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Digest_Size_224}}</td>
+              <td class="sha2" title='{{sha2.Hex_Digest_224}}' style="padding:5px;">{{sha2.Hex_Digest_224}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Block_Size_256}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Digest_Size_256}}</td>
+              <td class="sha2" title='{{sha2.Hex_Digest_256}}' style="width:fit-content;">{{sha2.Hex_Digest_256}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Block_Size_384}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Digest_Size_384}}</td>
+              <td class="sha2" title='{{sha2.Hex_Digest_384}}' style="width:fit-content;">{{sha2.Hex_Digest_384}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Block_Size_512}}</td>
+              <td class="td" style="width:fit-content;">{{sha2.Digest_Size_512}}</td>
+              <td class="sha2" title='{{sha2.Hex_Digest_512}}' style="width:fit-content;">{{sha2.Hex_Digest_512}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </mat-expansion-panel>
+  </mat-tab> -->
+
+
+  <mat-tab label="SHA2" class="mat-tab-labels">
+
+    <!-- <br><br><br><br> -->
+
+      <div style=" overflow-y: auto;">
+        <table style="align-items: center; width:95%; margin: 2.5%; border: 1px solid #00053E">
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">Date:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{getAsDate(sha.Date) | date: 'MMMM dd, YYYY'}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">ID:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.ID}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">Session File:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Session_File}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 224 Block Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Block_Size_224}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 224 Digest Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Digest_Size_224}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 224 Hex Digest:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              <div class="scroll-left"><p>{{sha.Hex_Digest_224}}</p></div>
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 256 Block Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Block_Size_256}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 256 Digest Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Digest_Size_256}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 256 Hex Digest:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              <div class="scroll-left"><p>{{sha.Hex_Digest_256}}</p></div>
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 384 Block Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Block_Size_384}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 384 Digest Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Digest_Size_384}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 384 Hex Digest:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              <div class="scroll-left"><p>{{sha.Hex_Digest_384}}</p></div>
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 512 Block Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Block_Size_512}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 512 Digest Size:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              {{sha.Digest_Size_512}}
+            </td>
+          </tr>
+          <tr class = "tr">
+            <th class="th-header" style="color: #ffe500">SHA 512 Hex Digest:</th>
+            <td class="td" *ngFor="let sha of sha2_db">
+              <div class="scroll-left"><p>{{sha.Hex_Digest_512}}</p></div>
+            </td>
+          </tr>
+
+        </table>
+      </div>
+  </mat-tab>
+
+
+
+</mat-tab-group>
