--- a/src/app/encryption-details/encryption-details.component.css
+++ b/src/app/encryption-details/encryption-details.component.css
@@ -1,15 +1,26 @@
 .colored-card{
   border-radius: 10px;
-  border: 2px solid #7BAFDE;
+  /* border: 4px solid #7BAFDE; */
+  border: 4px groove #00053E;
+  background-color: #7BAFDE;
+  color: white;
+
   margin: 50px;
   width: 65%;
   height: 55%;
   overflow-y: auto;
 }
 
-.tab-group{
-  overflow-y: hidden;
+.colored-card:hover{
+
+  border: 4px solid #FFE500;
+  background-color: white;
+  color: #00053E;
+
 }
+/* .tab-group{
+  overflow-y: hidden;
+} */
 
 .mat-tab-labels
 {
