--- a/src/app/home/encryption/encryption.component.css
+++ b/src/app/home/encryption/encryption.component.css
@@ -1,12 +1,15 @@
 .colored-card:hover{
-  background-color: #0072BC;
-  border:  2px solid #FFE500;
+  /* background-color: #0072BC; mid blue*/
+  background-color: #00053E;
+  border:  4px solid #FFE500;
   color: white;
 
 }
 
 .colored-card{
   border-radius: 10px;
-  border: 2px solid #00053E;
+  /* border: 2px solid #00053E;  dark blue*/
+  border: 4px solid #0072BC;
   margin: 50px;
+  color:#00053E;
 }
