Final Serior Project Commit

--- a/src/app/crack-password-details/crack-password-details.component.html
+++ b/src/app/crack-password-details/crack-password-details.component.html
@@ -15,6 +15,42 @@
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class="colored-card">
             <mat-card-title>
+              Computer Forensics
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The scientific examination and analysis of data held on, or retrieved from,
+                computer storage media in such a way that the information can be used as evidence in a court of law.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Computer Security
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The protection of computer systems and networks from information disclosure,
+                theft of or damage to their hardware, software, or electronic data.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Cryptology
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The practice and study of techniques concerning the storage and communication of data</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
               Password
             </mat-card-title>
             <mat-card-content>
@@ -104,20 +140,20 @@
             </mat-card-content>
           </mat-card>
       </mat-grid-tile> -->
-  <mat-tab label="Dictionary Attacks">
+  <mat-tab label="Brute Force Attacks">
     <br><br>
 
     <h6 style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-      Welcome to this section on Dictionary Attacks!</h6>
+      Welcome to this section on Brute Force Attacks!</h6>
 
     <p style="text-align: center; font-size: large; font-weight: bold; color: #00053E;">
-      This section explains the basics of what dictionary attacks are, and how they work. </p>
+      This section explains the basics of what brute force attacks are, and how they work. </p>
 
 
     <div class="grid-container">
       <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center">
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class="colored-card">
             <mat-card-title>
               Dictionary Attack
@@ -132,11 +168,11 @@
               </strong>
             </mat-card-content>
           </mat-card>
-        </mat-grid-tile>
+        </mat-grid-tile> -->
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class="colored-card">
             <mat-card-title>
-              Brute Force
+              Brute Force Attack
             </mat-card-title>
             <mat-card-content>
               <br>
