--- a/src/app/encryption-details/encryption-details.component.html
+++ b/src/app/encryption-details/encryption-details.component.html
@@ -14,6 +14,42 @@
     <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
 
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Computer Forensics
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The scientific examination and analysis of data held on, or retrieved from,
+                computer storage media in such a way that the information can be used as evidence in a court of law.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Computer Security
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The protection of computer systems and networks from information disclosure,
+                theft of or damage to their hardware, software, or electronic data.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class="colored-card">
+            <mat-card-title>
+              Cryptology
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The practice and study of techniques concerning the storage and communication of data</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
               Plaintext
@@ -650,29 +686,36 @@
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              SHA1 (Secure Hash Algorithm 1)
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+              A cryptographic hash function that takes an input and produces a 160-bit hash value
+              - known as message digest - which is typically rendered as a hexadecimal number that is
+              40 digits long. It is often used for file integrity verification
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              SHA2 (Secure Hash Algorithm 2)
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>
+              It is a family of cryptographic hash algorithms including SHA-224, SHA-256,
+              SHA-384, and SHA-512. It can be used to analyze a file's metadata
+              </strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
         <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
-            <mat-card-title>
-              Coming
-            </mat-card-title>
-            <mat-card-content>
-              <br>
-
-            </mat-card-content>
-          </mat-card>
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card class = "colored-card">
-            <mat-card-title>
-              Soon....
-            </mat-card-title>
-            <mat-card-content>
-              <br>
-
-            </mat-card-content>
-          </mat-card>
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
 
@@ -722,5 +765,4 @@
 
 
 </mat-tab-group>
-
 
