--- a/src/app/database-details/database-details.component.css
+++ b/src/app/database-details/database-details.component.css
@@ -25,16 +25,30 @@
 .table {
   border-collapse: collapse;
   width: 100%;
+  height: 50%;
 
 }
 
-.th, .td {
+.td {
 
   padding: 8px;
   text-align: center;
   border-bottom: 1px solid #DDD;
   border: 1px solid #00053E;
 }
+
+.th {
+
+  padding: 8px;
+  text-align: center;
+  border-bottom: 1px solid #DDD;
+  border: 1px solid #00053E;
+  background-color: #00053E;
+  position: sticky;
+  top: 0;
+
+}
+
 
 /* .tr:hover {background-color: #D6EEEE;} */
 
@@ -58,15 +72,22 @@
   border: 1px solid #00053E;
   background-color: #00053E;
   color:white;
+  position: sticky;
+  left: 0;
 }
 
 
 
 
+.html{
+  -ms-overflow-style: none;
+
+}
 
 
-
-
+.html::-webkit-scrollbar{
+  display:none;
+}
 
 
 
