--- a/src/app/encryption-details/encryption-details.component.css
+++ b/src/app/encryption-details/encryption-details.component.css
@@ -1,8 +1,7 @@
 .colored-card{
   border-radius: 10px;
-  /* border: 4px solid #7BAFDE; */
-  border: 4px groove #00053E;
-  background-color: #7BAFDE;
+  border: 4px solid #7BAFDE;
+  background-color: #00053E;
   color: white;
 
   margin: 50px;
